--- a/Vue_js/index.html
+++ b/Vue_js/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="sample.css">
+        <link rel="stylesheet" href="index.css">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
         <!-- 下記の記述でVue.jsをインポートしている -->
@@ -30,6 +30,6 @@
             </ul>
         </div>
 
-        <script src="sample.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
